--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
         <div class="footer-links">
             <a href="https://wavhous.com">HOME</a>
             <a href="https://music.wavhous.com">MUSIC</a>
-            <a href="https://x.com/wavhous" target="_blank" rel="noopener noreferrer">X</a>
+            <!-- <a href="https://x.com/wavhous" target="_blank" rel="noopener noreferrer">X</a> -->
             <a href="https://youtube.com/@wavhous" target="_blank" rel="noopener noreferrer">YOUTUBE</a>
         </div>
         <p>© 2025 wavhous</p>
